force-app/main/default/objects/Account/fields/Added_To_DNU_List__c.field-meta.xml
<CustomField>
    <fullName>Added_To_DNU_List__c</fullName>
    <label>Added To DNU List</label>
    <type>Date</type>
</CustomField>