force-app/main/default/objects/Account/fields/Reason_For_DNU_List_Inclusion__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_DNU_List_Inclusion__c</fullName>
    <label>Reason For DNU List Inclusion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>